# 2048-AI

./: .env.example  .gitignore  2048_q_learning.ipynb  agent.py  dnn.py  dqn.ipynb  expectimax.py  game.py  greedy.py  gym2048.py  human.py  hybrid_agent.py  learning.py  logic.py  main.py  mcts.py  monte_carlo.py  montecarlo.py  pyproject.toml  requirements.txt  run.py  smart_monte_carlo.py  state.py  stochastic.py  try_out.ipynb
src/game2048/: main.py
src/game2048/agents/: agent.py  expectimax.py  greedy.py  hybrid_agent.py  llm.py  mcts.py  montecarlo.py  smart_monte_carlo.py  stochastic.py
src/game2048/core/: game.py  state.py
