[project]
name = "game2048"
version = "0.1.0"
description = "2048 AI project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "google-genai>=1.66.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.2",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
